# ZXStudio

./: Cargo.toml  README.md  ROADMAP.md  roadmap.md
.github/workflows/: release.yml
dev/: config.h
locales/: en.json  ru.json
map/: mapa.prj
src/: app.rs  main.rs
src/app/: app_struct.rs  asset_loader.rs  compiler_observer.rs  dock_layout.rs  menu_bar.rs  mod.rs  signal_handler.rs  states.rs  tab_viewer.rs  theme.rs  toolbar.rs  wizard.rs  world_inspector.rs
src/app/menu_bar/: build_menu.rs  file_menu.rs  lang_menu.rs  mod.rs
src/app/wizard/: configure_world.rs  mod.rs  name_and_path.rs  select_platform.rs  welcome_choice.rs
src/core/: compressors.rs  exporter_config.rs  exporter_enemies.rs  exporter_hotspots.rs  image_processor.rs  io.rs  mod.rs  project_template.rs  validator.rs
src/core/compiler_runner/: mod.rs  step1.rs  step2.rs  step3.rs  step4.rs  step5.rs
src/core/exporter/: exporter_config.rs  exporter_enemies.rs  exporter_hotspots.rs  exporter_map.rs  mod.rs
src/core/pipeline/: gfx_task.rs  main_task.rs  map_task.rs  mod.rs  script_task.rs  sprite_task.rs
src/core/utils/: mod.rs  png2scr.rs  ts2bin.rs
src/core/validator/: attribute_clash.rs  mod.rs  world_collisions.rs
src/models/: config.rs  enemy_ai.rs  mod.rs  project.rs  screen.rs
src/models/config/: engine.rs  general.rs  hud.rs  hud_rendering.rs  map_goals.rs  mechanics_enemies.rs  mod.rs  (+4 more)
src/ui/: configurator.rs  hud_editor.rs  map_canvas.rs  map_editor.rs  mod.rs  palette_enemies.rs  palette_tiles.rs  project_tree.rs  script_ide.rs
templates/: config.h.template
(+40 files in other folders)
