[package]
name = "zx_ide"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.25.0", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.2"
egui_dock = { version = "=0.10.0", features = ["serde"] }
chrono = "0.4"
rfd = "0.14"
font-kit = "0.14"